--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 								<header class="major">
 									<h2><a>About me</a></h2>
 									<p> My name is Pshenichni Vlad and this is my portfolio.<br />
-										I'm a passionate developer but more passionate about technology, <br />
+										I'm a passionate about development but more passionate about technology, <br />
 										highly motivated and poses strong interest in evolving myself.<br />
 										I'm a student in Industrial engineering with specialisation in information systems<br />
 										and looking for my first in-depth experience in the High-Tech Industry.</p>
