--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 										After the creation of database I used multiple methods in the queries I created with regard of the SQL limitations.
 									</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/vlad21591/Databae-SQL-Project.git" class="button">Full Code</a></li>
+										<li><a href="https://github.com/vlad21591/Databae-SQL-Project.git" class="button">Github Repository</a></li>
 									</ul>
 								</article>
 								<article>
