--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 										After the creation of database I used multiple methods in the queries I created with regard of the SQL limitations.
 									</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/vlad21591/Databae-SQL-Project.git" class="button">Github Repository</a></li>
+										<li><a href="https://github.com/vlad21591/Databae-SQL-Project.git" class="button">Repository</a></li>
 									</ul>
 								</article>
 								<article>
@@ -74,7 +74,7 @@
 									matplotlib library for visualisation - Will continue to grow
 										with seaborn library and more analysis.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/vlad21591/ML-DataScience-Project.git" class="button">Full Code</a></li>
+										<li><a href="https://github.com/vlad21591/ML-DataScience-Project.git" class="button">Repository</a></li>
 									</ul>
 								</article>
 								<article>
@@ -86,7 +86,7 @@
 										The project includes different python functions and elements such as inheritance of objects,
 										 manipulation of different inputs, creation of objects from said inputs,GUI using tkinter library and more.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/vlad21591/Python-Project-Appliance-Store.git" class="button">Full Code</a></li>
+										<li><a href="https://github.com/vlad21591/Python-Project-Appliance-Store.git" class="button">Repository</a></li>
 									</ul>
 								</article>
 								<article>
@@ -96,7 +96,7 @@
 									<a  class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 									<p>A python code which allows you to crawl a web page and extract HTML links which is present at the page.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/vlad21591/HTML-Web-Crawler.git" class="button">Full Code</a></li>
+										<li><a href="https://github.com/vlad21591/HTML-Web-Crawler.git" class="button">Repository</a></li>
 									</ul>
 								</article>
 								<article>
@@ -106,7 +106,7 @@
 									<a class="image fit"><img src="images/pic7.jpg" alt="" /></a>
 									<p>A python code using Selenium to automate browser activity.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/vlad21591/Selenium/tree/master" class="button">Full Code</a></li>
+										<li><a href="https://github.com/vlad21591/Selenium/tree/master" class="button">Repository</a></li>
 									</ul>
 								</article>
 								<article>
@@ -118,7 +118,7 @@
 										creation of different models to predict outcome of a specific database.
 										The models in this project predict which passengers survived the Titanic shipwreck.[Kaggle Challenge]</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/vlad21591/MachineLearningAlgorithms.git" class="button">Full Code</a></li>
+										<li><a href="https://github.com/vlad21591/MachineLearningAlgorithms.git" class="button">Repository</a></li>
 									</ul>
 								</article>
 							</section>
