--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
 								</article>
 								<article>
 									<header>
-										<h2><a>Python OOP Project</a></h2>
+										<h2><a>Sales Analysis</a></h2>
 									</header>
 									<a  class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p> This project consists several python files which can be used to create an appliance Store.
-										The project includes different python functions and elements such as inheritance of objects,
-										 manipulation of different inputs, creation of objects from said inputs,GUI using tkinter library and more.</p>
+									<p> This project focuses on data analysis using Python's Pandas library. 
+										Pandas is a powerful and flexible open-source data manipulation and analysis tool, widely used in the data science and analytics community.
+										This project serves as a template for performing data analysis tasks, and it can be a starting point for various data exploration and manipulation projects.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/vlad21591/Python-Project-Appliance-Store.git" class="button">Repository</a></li>
+										<li><a href="https://github.com/vlad21591/Sales-Analysis.git" class="button">Repository</a></li>
 									</ul>
 								</article>
 								<article>
