--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 										<h2><a>HTML Web Crawler</a></h2>
 									</header>
 									<a  class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>A python code which allows you to crawl a web page and extract HTML links which is present at the page.</p>
+									<p>A simple python code which allows you to crawl a web page and extract HTML links which is present at the page.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/vlad21591/HTML-Web-Crawler.git" class="button">Repository</a></li>
 									</ul>
