--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>Central, Rishon-LeZion</p>
+								<p>Ramat Ahail, Tel-Aviv</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
