--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 									<header>
 										<h2><a>Sales Analysis</a></h2>
 									</header>
-									<a  class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<a  class="image fit"><img src="images/img1.jpg" alt="" /></a>
 									<p> This project focuses on data analysis using Python's Pandas library. 
 										Pandas is a powerful and flexible open-source data manipulation and analysis tool, widely used in the data science and analytics community.
 										This project serves as a template for performing data analysis tasks, and it can be a starting point for various data exploration and manipulation projects.</p>
