--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>My Portfolio</h1>
-						<p>A show case of my projects and abilities</p>
+						<p> Hello and welcome to my portfolio! <br /> 
+						With a background in [mention your background briefly], I've gained hands-on experience in analyzing data to solve problems.
+						In this portfolio, you'll find examples of my work, from cleaning and preparing data to creating insightful visualizations and conducting in-depth analysis. 
+						I'm dedicated to continuous learning and am always looking for new challenges to apply my skills.
+
+						Thank you for taking the time to explore my portfolio. If you have any questions, I'd love to hear from you.
+						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
