--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<div id="intro">
 						<h1>My Portfolio</h1>
 						<p> Hello and welcome to my portfolio! <br /> 
-						In this portfolio, you'll find examples of my work, from cleaning and preparing data to creating insightful visualizations and conducting in-depth analysis.<br/> 
+						In this portfolio, you'll find examples of my work, from cleaning and preparing data to creating insightful visualizations and conducting in-depth analysis. 
 						With a background in managing campaigns with tools like SQL, Excel, PowerBI to analyze performance and statistical analysis for various predictions, I've gained hands-on experience in analyzing data to solve problems.
 						I'm dedicated to continuous learning and am always looking for new challenges to apply my skills. <br/>
 
