--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 									<header>
 										<h2><a>HTML Web Crawler</a></h2>
 									</header>
-									<a  class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+									<a  class="image fit"><img src="images/Img2.jpg" alt="" /></a>
 									<p>A simple python code which allows you to crawl a web page and extract HTML links which is present at the page.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/vlad21591/HTML-Web-Crawler.git" class="button">Repository</a></li>
