--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Main</a></li>
+							<li class="active"><a href="index.html"></a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/vladp11" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
