--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a>SQL Project</a></h2>
+										<h2><a>SQL Project</a>Repositories</h2>
 									</header>
 									<a  class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>SQL Project: Car Race -
