--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html"></a></li>
+							<li class="active"><a href="index.html"></a>Repositories</li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/vladp11" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
@@ -45,7 +45,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a>SQL Project</a>Repositories</h2>
+										<h2><a>SQL Project</a></h2>
 									</header>
 									<a  class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>SQL Project: Car Race -
