--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@
 
 				<!-- Nav -->
 					<nav id="nav">
-						<ul class="links">
-							<li class="active"><a href="index.html"></a>Repositories</li>
-						</ul>
-						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/vladp11" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-							<li><a href="https://github.com/" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-						</ul>
+					    <ul class="links">
+					        <li class="active"><a href="index.html"></a><span style="color: black;">Repositories</span></li>
+					    </ul>
+					    <ul class="icons">
+					        <li><a href="https://www.linkedin.com/in/vladp11" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+					        <li><a href="https://github.com/" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+					    </ul>
 					</nav>
+
 
 				<!-- Main -->
 					<div id="main">
