--- a/index.html
+++ b/index.html
@@ -26,15 +26,23 @@
 					</div>
 
 				<!-- Nav -->
+					<style>
+					    .black-font {
+					        color: black;
+					        font-family: Arial, sans-serif; /* Change this to your preferred font */
+					    }
+					</style>
+					
 					<nav id="nav">
 					    <ul class="links">
-					        <li class="active"><a href="index.html"></a><span style="color: black;">Repositories</span></li>
+					        <li class="active"><a href="index.html"></a><span class="black-font">Repositories</span></li>
 					    </ul>
 					    <ul class="icons">
 					        <li><a href="https://www.linkedin.com/in/vladp11" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 					        <li><a href="https://github.com/" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 					    </ul>
 					</nav>
+
 
 
 				<!-- Main -->
