--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
 									<p>Machine learning and Data Science Project - Prediction of
 									a heart condition using 5 different algorithms on 13
 									attributes. Using pandas library to analyse a database and
-									matplotlib library for visualisation - Will continue to grow
-										with seaborn library and more analysis.</p>
+									matplotlib library for visualisation.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/vlad21591/Data-Science.git" class="button">Repository</a></li>
 									</ul>
