--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 										<h2><a>Machine-Learning Project</a></h2>
 									</header>
 									<a class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Machine-learning algorithms project -
+									<p>Machine-learning algorithms project (Kaggle Project) -
 										creation of different models to predict outcome of a specific database.
-										The models in this project predict which passengers survived the Titanic shipwreck.[Kaggle Challenge]</p>
+										The models in this project predict which passengers survived the Titanic shipwreck.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/vlad21591/MachineLearningAlgorithms.git" class="button">Repository</a></li>
 									</ul>
